2008-03-24  Yuri Kozlov  <kozlov.y@gmail.com>

	* po/ru.po: updated to 431t

2008-03-23  Miguel Figueiredo  <elmig@debianpt.org>

	* po/pt.po: updated to 431t

2008-03-21  Changwoo Ryu  <cwryu@debian.org>

	* po/ko.po: updated to 431t

2008-03-17  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.5.xml: Fix manpages generation. The SYS_GID_MAX
	and SYS_UID_MAX entities were not defined.

2008-03-17  Nicolas François  <nicolas.francois@centraliens.net>

	* src/faillog.c: Fix minor compilation warning (assignment used as
	a comparison).

2008-03-17  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h, src/login.c: login_access() is used in
	src/login.c, and defined in src/login_nopam.c (which lacks a
	prototype). Move its prototype from src/login.c to
	lib/prototypes.h.

2008-03-17  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c, src/groupmod.c: Compilation fix. gshadow_locked
	should only be used if SHADOWGRP is defined.

2008-03-17  Nicolas François  <nicolas.francois@centraliens.net>

	* src/grpck.c: Fix some warnings. compare_members_lists() is only
	used if SHADOWGRP is defined.

2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/groupmod.c: Make sure the passwd, group, and gshadow
	files are unlocked on exit. Unlock locked files in fail_exit().
	Prefer fail_exit() over exit().
	* NEWS, src/groupmod.c: When the GID of a group is changed, update
	also the GID of the passwd entries of the users whose primary
	group is the group being modified.

2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c (commonio_remove): Fail when the name to be
	removed is used by different entries (like commonio_update does).
	* NEWS: This fix the behavior of groupdel when the system is not
	configured to support split group but different group entries
	have the name of the group to be deleted.

2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>
